fixed priorityQueue to have O(n) add time