@@ -11,19 +11,25 @@ public class MyPriorityQueue {
     public MyPriorityQueue(){
         queue = new LinkedList<>();
     }
-
+//remove each item from queue, test value, rebuild queue.
     public void enqueue(int item) {
-        if (queue.isEmpty()){
+        boolean itemAdded = false;
+        if (queue.isEmpty()) {
             queue.add(item);
-        } else if (queue.get(0) <= item){
-            queue.addFirst(item);
-        } else if (queue.get(queue.size()-1) >= item){
-            queue.addLast(item);
+        } else if (queue.size()==1) {
+            if (queue.getFirst() < item) {
+                queue.addFirst(item);
+            } else if (queue.getFirst() >= item) {
+                queue.addLast(item);
+            }
         } else {
-            for (int i=0; i<queue.size()-1; i++){
-                if (queue.get(i) >= item && queue.get(i+1) <= item){
-                    queue.add(i+1, item);
-                    break;
+            for (int i=0; i<queue.size(); i++){
+                int testVal = queue.getFirst();
+                if (testVal > item || itemAdded){
+                    queue.addLast(queue.removeFirst());
+                } else if (testVal <= item){
+                    queue.addLast(item);
+                    itemAdded = true;
                 }
             }
         }
